<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.alfredoul.petagram.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            ></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:textSize="@dimen/title"
        android:text="@string/about_about_title"/>
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAboutTitle"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/about_about"/>
    <TextView
        android:id="@+id/tvSupportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAbout"
        android:textSize="@dimen/subtitle"
        android:text="@string/about_support_title"/>
    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSupportTitle"
        android:text="@string/about_support"/>
</RelativeLayout>
